# remote-ricoh-csv-smb-sync

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.codex/: session.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: sponsoring.md
scripts/: install_cron.sh
src/remote_ricoh/: __init__.py  config.py  firebird_cmail.py  lock.py  portal.py  run.py  service.py  smb_io.py  zip_processing.py
src/remote_ricoh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_firebird_cmail.py  test_lock.py  test_portal.py  test_run.py  test_service.py  test_smb_io.py  test_zip_processing.py
