[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-ricoh"
version = "0.1.0"
description = "Automatyczne pobieranie CSV licznikow z Ricoh i zapis na SMB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fdb",
  "firebirdsql",
  "passlib",
  "playwright==1.53.0",
  "python-dotenv==1.0.1",
  "smbprotocol==1.15.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
